--- a/apk/res/values-am/strings.xml
+++ b/apk/res/values-am/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"ወደ ግርጌ ውሰድ"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"ቅድሚያ በሚሰጠው ዝርዝር ውስጥ <xliff:g id="SELECTED_APP">%s</xliff:g> የሚለውን ለመጎተት እና እንደገና ለማዘዝ ጥቅም ላይ የሚውል አዝራር"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"ከቅድሚያ ዝርዝር <xliff:g id="SELECTED_APP">%s</xliff:g> ማስወገጃ አዝራር"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"<xliff:g id="SELECTED_APP">%s</xliff:g>ን ከመተግበሪያ ምንጮች ዝርዝር ላይ እንደገና ለመደርደር ወይም ለማስወገድ የሚሆን አዝራር"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"ዳግም ለመደርደር ሁለቴ መታ አድርገው ይጎትቱ"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="POSITION">%1$s</xliff:g> በዝርዝር <xliff:g id="SELECTED_APP">%2$s</xliff:g> ውስጥ"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"የአካል ብቃት፣ ጤናማነት"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"ፈቃዶች"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"የጤና አገናኝ፣ የጤና ውሂብ፣ የጤና ምድቦች፣ የውሂብ መዳረሻ፣ እንቅስቃሴ፣ የሰውነት አካል መለኪያዎች፣ የዑደት መከታተል፣ ስነ-ምግብ፣ እንቅልፍ፣ መሠረታዊ ነገሮች"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"መተግበሪያ ያክሉ"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"የመተግበሪያ ምንጮችን ያርትዑ"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"የመሣሪያ ነባሪ"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"ወደላይ ያንቀሳቅሱ"</string>
+    <string name="move_down" msgid="4404970288236170693">"ወደታች ያንቀሳቅሱ"</string>
+    <string name="remove" msgid="1340423400489007362">"አስወግድ"</string>
     <string name="app_data_title" msgid="6499967982291000837">"የመተግበሪያ ውሂብ"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"ከ<xliff:g id="APP_NAME">%1$s</xliff:g> የመጣ ውሂብ እዚህ ይታያል"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"የጤና አገናኝ መዳረሻ ካላቸው መተግበሪያዎች የመጣ ውሂብ እዚህ ይታያል"</string>
