--- a/apk/res/values-as/strings.xml
+++ b/apk/res/values-as/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"একেবাৰে তললৈ নিয়ক"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"অগ্ৰাধিকাৰ সূচীখনত <xliff:g id="SELECTED_APP">%s</xliff:g>ক টানি আনি ক্ৰম সলনি কৰিবলৈ বুটাম"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"অগ্ৰাধিকাৰৰ সূচীখনৰ পৰা <xliff:g id="SELECTED_APP">%s</xliff:g> আঁতৰাবলৈ বুটাম"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"এপৰ উৎস সূচীখনৰ পৰা <xliff:g id="SELECTED_APP">%s</xliff:g>ৰ ক্ৰম সলনি কৰাৰ বা আঁতৰোৱাৰ বুটাম"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"ক্ৰম সলনি কৰিবলৈ দুবাৰ টিপক আৰু টানি আনক"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="SELECTED_APP">%2$s</xliff:g>ৰ সূচীখনত <xliff:g id="POSITION">%1$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"ফিটনেছ, সুস্থতা"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"অনুমতি"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"Health Connect, স্বাস্থ্য সম্পৰ্কীয় ডেটা, স্বাস্থ্যৰ শিতান, ডেটাৰ এক্সেছ, কাৰ্যকলাপ, শৰীৰৰ জোখ-মাখ, ঋতুচক্ৰ ট্ৰেক কৰা, পৰিপুষ্টি, টোপনি, ভাইটেল"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"এটা এপ্‌ যোগ দিয়ক"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"এপৰ উৎস সম্পাদনা কৰক"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"ডিভাইচৰ ডিফ’ল্ট"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"ওপৰলৈ নিয়ক"</string>
+    <string name="move_down" msgid="4404970288236170693">"তললৈ নিয়ক"</string>
+    <string name="remove" msgid="1340423400489007362">"আঁতৰাওক"</string>
     <string name="app_data_title" msgid="6499967982291000837">"এপৰ ডেটা"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g>ৰ ডেটাখিনি ইয়াত দেখা পোৱা যাব"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connectৰ এক্সেছ থকা এপ্‌সমূহৰ ডেটা ইয়াত দেখুওৱা হ’ব"</string>
