--- a/apk/res/values-be/strings.xml
+++ b/apk/res/values-be/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Перамясціць уніз"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Кнопка для змянення прыярытэту праграмы \"<xliff:g id="SELECTED_APP">%s</xliff:g>\" (націсніце двойчы і перацягніце)"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Кнопка для выдалення праграмы \"<xliff:g id="SELECTED_APP">%s</xliff:g>\" з прыярытэтных"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"Кнопка для змянення пазіцыі ў спісе або выдалення праграмы \"<xliff:g id="SELECTED_APP">%s</xliff:g>\" са спіса крыніц праграм"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Змяніце парадак перацягваннем, націснуўшы двойчы"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="POSITION">%1$s</xliff:g> у спісе \"<xliff:g id="SELECTED_APP">%2$s</xliff:g>\""</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"фітнес, здароўе"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"дазволы"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"здароўе і спорт, даныя пра здароўе, катэгорыі здароўя, доступ да даных, актыўнасць, параметры цела, сачэнне за цыклам, харчаванне, сон, паказчыкі арганізма"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Дадаць праграму"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Змяніць спіс праграм – крыніц даных"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Стандартная праграма прылады"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Перамясціць уверх"</string>
+    <string name="move_down" msgid="4404970288236170693">"Перамясціць уніз"</string>
+    <string name="remove" msgid="1340423400489007362">"Выдаліць"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Даныя праграмы"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Тут будуць паказвацца даныя з праграмы \"<xliff:g id="APP_NAME">%1$s</xliff:g>\""</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Тут будуць паказвацца даныя з праграм, у якіх ёсць доступ да \"Здароўя і спорту\""</string>
