--- a/apk/res/values-bg/strings.xml
+++ b/apk/res/values-bg/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Преместване в долната част"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Бутон за плъзгане и пренареждане на <xliff:g id="SELECTED_APP">%s</xliff:g> в приоритетния списък"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Бутон за премахване на <xliff:g id="SELECTED_APP">%s</xliff:g> от приоритетния списък"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"Бутон за пренареждане или премахване на <xliff:g id="SELECTED_APP">%s</xliff:g> от списъка с приложения източници"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Докоснете два пъти и плъзнете, за да пренаредите"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"Позиция на <xliff:g id="SELECTED_APP">%2$s</xliff:g> в списъка: <xliff:g id="POSITION">%1$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"физическа активност, уелнес"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"разрешения"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"Health Connect, здравни данни, здравни категории, достъп до данни, активност, мерки на тялото, проследяване на цикъла, хранене, сън, жизнени показатели"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Добавяне на приложение"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Редактиране на източниците на приложения"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Стандартно за устройството"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Преместване нагоре"</string>
+    <string name="move_down" msgid="4404970288236170693">"Преместване надолу"</string>
+    <string name="remove" msgid="1340423400489007362">"Премахване"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Данни от приложението"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Данните от <xliff:g id="APP_NAME">%1$s</xliff:g> ще се показват тук"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Тук ще се показват данните от приложенията, които имат достъп до Health Connect"</string>
