--- a/apk/res/values-da/strings.xml
+++ b/apk/res/values-da/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Flyt til bunden"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Knap til at trække og omorganisere <xliff:g id="SELECTED_APP">%s</xliff:g> i prioritetslisten"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Knap til at fjerne <xliff:g id="SELECTED_APP">%s</xliff:g> fra prioritetslisten"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"Knap til at omorganisere eller fjerne <xliff:g id="SELECTED_APP">%s</xliff:g> fra listen over appkilder"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Tryk to gange og træk for at omorganisere"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="POSITION">%1$s</xliff:g> på listen <xliff:g id="SELECTED_APP">%2$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"træning, velvære"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"tilladelser"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, sundhedsdata, sundhedskategorier, dataadgang, aktivitet, kropsmål, tracking af cyklus, ernæring, søvn, vitale værdier"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Tilføj en app"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Rediger appkilder"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Enhedens standardapp"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Flyt op"</string>
+    <string name="move_down" msgid="4404970288236170693">"Flyt ned"</string>
+    <string name="remove" msgid="1340423400489007362">"Fjern"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Appdata"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Data fra <xliff:g id="APP_NAME">%1$s</xliff:g> vises her"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Data fra apps med adgang til Health Connect vises her"</string>
