--- a/apk/res/values-de/strings.xml
+++ b/apk/res/values-de/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Ans Ende verschieben"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Schaltfläche zum Ziehen von <xliff:g id="SELECTED_APP">%s</xliff:g> in der Prioritätenliste, um die Reihenfolge zu ändern"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Taste zum Entfernen von <xliff:g id="SELECTED_APP">%s</xliff:g> aus der Prioritätenliste"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"Schaltfläche zum Neuanordnen der App „<xliff:g id="SELECTED_APP">%s</xliff:g>“ in der Liste der App-Quellen oder zum Entfernen der App aus der Liste der App-Quellen"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Doppeltippen und ziehen, um Reihenfolge zu ändern"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"Die App „<xliff:g id="SELECTED_APP">%2$s</xliff:g>“ ist auf <xliff:g id="POSITION">%1$s</xliff:g> Position in der Liste"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"fitness, wellness"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"berechtigungen"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, gesundheitsdaten, gesundheitskategorien, datenzugriff, aktivitäten, körperwerte, zyklustracking, ernährung, schlaf, vitalparameter"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"App hinzufügen"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"App-Quellen bearbeiten"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Standard-App bei diesem Gerät"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Nach oben"</string>
+    <string name="move_down" msgid="4404970288236170693">"Nach unten"</string>
+    <string name="remove" msgid="1340423400489007362">"Entfernen"</string>
     <string name="app_data_title" msgid="6499967982291000837">"App-Daten"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Daten aus <xliff:g id="APP_NAME">%1$s</xliff:g> werden hier angezeigt"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Daten aus Apps mit Zugriff auf Health Connect werden hier angezeigt"</string>
