--- a/apk/res/values-el/strings.xml
+++ b/apk/res/values-el/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Μετακίνηση στο τέλος"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Κουμπί για σύρσιμο και αναδιάταξη της εφαρμογής <xliff:g id="SELECTED_APP">%s</xliff:g> στη λίστα προτεραιότητας"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Κουμπί κατάργησης <xliff:g id="SELECTED_APP">%s</xliff:g> από τη λίστα προτεραιοτήτων"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"Κουμπί για την αναδιάταξη ή την κατάργηση της εφαρμογής <xliff:g id="SELECTED_APP">%s</xliff:g> από τη λίστα πηγών εφαρμογών"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Πατήστε δύο φορές και σύρετε για αλλαγή σειράς"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="POSITION">%1$s</xliff:g> στη λίστα <xliff:g id="SELECTED_APP">%2$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"φυσική κατάσταση, ευεξία"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"άδειες"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, δεδομένα υγείας, κατηγορίες υγείας, πρόσβαση δεδομένων, δραστηριότητα, μετρήσεις σώματος, παρακολούθηση κύκλου, διατροφή, ύπνος, ζωτικές λειτουργίες"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Προσθήκη εφαρμογής"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Επεξεργασία πηγών εφαρμογών"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Προεπιλογή συσκευής"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Μετακίνηση προς τα επάνω"</string>
+    <string name="move_down" msgid="4404970288236170693">"Μετακίνηση προς τα κάτω"</string>
+    <string name="remove" msgid="1340423400489007362">"Κατάργηση"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Δεδομένα εφαρμογών"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Τα δεδομένα από την εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> θα εμφανίζονται εδώ"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Τα δεδομένα από εφαρμογές με πρόσβαση στο Health Connect θα εμφανίζονται εδώ"</string>
