--- a/apk/res/values-hu/strings.xml
+++ b/apk/res/values-hu/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Áthelyezés a végére"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"A(z) <xliff:g id="SELECTED_APP">%s</xliff:g> alkalmazás húzására és helyének a prioritási listán való átrendezésére szolgáló gomb"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"A(z) <xliff:g id="SELECTED_APP">%s</xliff:g> appot a prioritási listáról eltávolító gomb"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"A(z) <xliff:g id="SELECTED_APP">%s</xliff:g> alkalmazásforrás-listáról való eltávolítására vagy átrendezésére szolgáló gomb"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Koppintson duplán és húzza az átrendezéshez"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="POSITION">%1$s</xliff:g> helyen a listában (<xliff:g id="SELECTED_APP">%2$s</xliff:g>)"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"fitnesz, wellness"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"engedélyek"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, egészségügyi adatok, egészségügyi kategóriák, adathozzáférés, tevékenységek, testméretek, cikluskövetés, táplálkozás, alvás, életfunkciók"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Alkalmazás hozzáadása"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Alkalmazásforrások szerkesztése"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Alapértelmezett"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Mozgatás felfelé"</string>
+    <string name="move_down" msgid="4404970288236170693">"Mozgatás lefelé"</string>
+    <string name="remove" msgid="1340423400489007362">"Eltávolítás"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Alkalmazásadatok"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Itt jelennek majd meg a(z) <xliff:g id="APP_NAME">%1$s</xliff:g> adatai"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Itt jelennek meg az adatok azokból az alkalmazásokból, amelyek hozzáférnek a Health Connecthez"</string>
