--- a/apk/res/values-iw/strings.xml
+++ b/apk/res/values-iw/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"העברה לתחתית הרשימה"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"כפתור לגרירה וסידור מחדש של <xliff:g id="SELECTED_APP">%s</xliff:g> ברשימת העדיפויות של האפליקציות"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"כפתור להסרת <xliff:g id="SELECTED_APP">%s</xliff:g> מרשימת העדיפויות של האפליקציות"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"כפתור לשינוי המיקום או להסרה של <xliff:g id="SELECTED_APP">%s</xliff:g> מרשימת המקורות של אפליקציות"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"כדי לשנות את הסדר, לוחצים לחיצה כפולה וגוררים"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"מקום <xliff:g id="POSITION">%1$s</xliff:g> ברשימה \"<xliff:g id="SELECTED_APP">%2$s</xliff:g>\""</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"כושר גופני, איכות חיים"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"הרשאות"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"Health Connect, נתוני בריאות, קטגוריות בריאות, גישה לנתונים, פעילות, מדדים גופניים, מעקב אחר המחזור, תזונה, שינה, סימנים חיוניים"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"הוספת אפליקציה"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"עריכת המקורות של האפליקציות"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"ברירת המחדל של המכשיר"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"העברה למעלה"</string>
+    <string name="move_down" msgid="4404970288236170693">"העברה למטה"</string>
+    <string name="remove" msgid="1340423400489007362">"הסרה"</string>
     <string name="app_data_title" msgid="6499967982291000837">"נתוני האפליקציה"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"כאן יופיעו נתונים מהאפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"כאן יופיעו נתונים מאפליקציות שיש להן גישה ל-Health Connect"</string>
