--- a/apk/res/values-mn/strings.xml
+++ b/apk/res/values-mn/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Доод тал руу зөөх"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"<xliff:g id="SELECTED_APP">%s</xliff:g>-г чухал жагсаалтад чирч, дахин эрэмбэлэх товч"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"<xliff:g id="SELECTED_APP">%s</xliff:g>-г чухал зүйлсийн жагсаалтаас хасах товч"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"Аппын эх сурвалжуудын жагсаалтаас <xliff:g id="SELECTED_APP">%s</xliff:g>-г дахин эрэмбэлэх, хасах товч"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Дахин эрэмбэлэхийн тулд хоёр товшоод чирнэ үү"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="SELECTED_APP">%2$s</xliff:g>-н жагсаалтын <xliff:g id="POSITION">%1$s</xliff:g>-д байна"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"фитнес, эрүүл аж төрөх ёс"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"зөвшөөрөл"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, эрүүл мэндийн өгөгдөл, эрүүл мэндийн ангилал, өгөгдлийн хандалт, үйл ажиллагаа, биеийн хэмжээ, мөчлөгийн хяналт, тэжээллэг чанар, унтлага, үзүүлэлт"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Апп нэмэх"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Аппын эх сурвалжуудыг засах"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Төхөөрөмжийн өгөгдмөл"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Дээш зөөх"</string>
+    <string name="move_down" msgid="4404970288236170693">"Доош зөөх"</string>
+    <string name="remove" msgid="1340423400489007362">"Хасах"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Aппын өгөгдөл"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g>-н өгөгдлийг энд харуулна"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connect-д хандах эрхтэй аппуудын өгөгдлийг энд харуулна"</string>
