--- a/apk/res/values-mr/strings.xml
+++ b/apk/res/values-mr/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"तळाशी हलवा"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"प्राधान्य सूचीमध्ये <xliff:g id="SELECTED_APP">%s</xliff:g> ड्रॅग करण्याचे आणि पुन्हा क्रमाने लावण्याचे बटण"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"प्राधान्य सूचीमधून <xliff:g id="SELECTED_APP">%s</xliff:g> काढून टाकण्यासाठीचे बटण"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"ॲपच्या स्रोतांच्या सूचीमध्ये <xliff:g id="SELECTED_APP">%s</xliff:g> पुन्हा क्रमाने लावण्यासाठी किंवा काढून टाकण्यासाठीचे बटण"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"परत क्रमाने लावण्यासाठी दोनदा टॅप करून ड्रॅग करा"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="SELECTED_APP">%2$s</xliff:g> सूचीमध्ये <xliff:g id="POSITION">%1$s</xliff:g> वर"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"फिटनेस, स्वास्थ्य"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"परवानग्या"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"Health Connect, आरोग्याशी संबंधित डेटा, आरोग्याशी संबंधित वर्गवाऱ्या, डेटा अ‍ॅक्सेस, अ‍ॅक्टिव्हिटी, शरीराचे मोजमाप, मासिक पाळीचा माग ठेवणे, पोषण, झोप, परिमाणे"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"एखादे ॲप जोडा"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"अ‍ॅप स्रोत संपादित करा"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"डिव्हाइस डीफॉल्ट"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"वर हलवा"</string>
+    <string name="move_down" msgid="4404970288236170693">"खाली हलवा"</string>
+    <string name="remove" msgid="1340423400489007362">"काढून टाका"</string>
     <string name="app_data_title" msgid="6499967982291000837">"अ‍ॅप डेटा"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> मधील डेटा इथे दिसेल"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connect चा अ‍ॅक्सेस असलेल्या ॲप्सचा डेटा इथे दर्शवला जाईल"</string>
