--- a/apk/res/values-or/strings.xml
+++ b/apk/res/values-or/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"ନିମ୍ନକୁ ମୁଭ କରନ୍ତୁ"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"ପ୍ରାଥମିକତା ତାଲିକାରେ ଥିବା <xliff:g id="SELECTED_APP">%s</xliff:g>କୁ ଡ୍ରାଗ କରି ରିଅର୍ଡର କରିବା ବଟନ"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"ପ୍ରାଥମିକତା ତାଲିକାରୁ <xliff:g id="SELECTED_APP">%s</xliff:g>କୁ କାଢ଼ି ଦେବା ପାଇଁ ବଟନ"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"ଆପ ସୋର୍ସଗୁଡ଼ିକର ତାଲିକାରେ <xliff:g id="SELECTED_APP">%s</xliff:g>କୁ ପୁଣି କ୍ରମରେ ରଖିବା କିମ୍ବା ସେଠାରୁ କାଢ଼ି ଦେବା ପାଇଁ ବଟନ"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"ରିଅର୍ଡର କରିବାକୁ ଦୁଇଥର ଟାପ କରି ଡ୍ରାଗ କରନ୍ତୁ"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="SELECTED_APP">%2$s</xliff:g> ତାଲିକାରେ <xliff:g id="POSITION">%1$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"ଫିଟନେସ, ସୁସ୍ଥତା"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"ଅନୁମତିଗୁଡ଼ିକ"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"Health Connect, ସ୍ୱାସ୍ଥ୍ୟ ଡାଟା, ସ୍ୱାସ୍ଥ୍ୟର ବର୍ଗ, ଡାଟା ଆକ୍ସେସ, କାର୍ଯ୍ୟକଳାପ, ଶରୀର ପରିମାପ, ସାଇକେଲ ଟ୍ରାକିଂ, ନ୍ୟୁଟ୍ରିସନ, ଶୋଇବା, ଭାଇଟାଲ"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"ଏକ ଆପ ଯୋଗ କରନ୍ତୁ"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"ଆପ ସୋର୍ସଗୁଡ଼ିକୁ ଏଡିଟ କରନ୍ତୁ"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"ଡିଭାଇସ୍ ଡିଫଲ୍ଟ"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"ଉପରକୁ ମୁଭ କରନ୍ତୁ"</string>
+    <string name="move_down" msgid="4404970288236170693">"ତଳକୁ ମୁଭ କରନ୍ତୁ"</string>
+    <string name="remove" msgid="1340423400489007362">"କାଢ଼ି ଦିଅନ୍ତୁ"</string>
     <string name="app_data_title" msgid="6499967982291000837">"ଆପ ଡାଟା"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g>ରୁ ଡାଟା ଏଠାରେ ଦେଖାଯିବ"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connectକୁ ଆକ୍ସେସ ଥିବା ଆପ୍ସରୁ ଡାଟା ଏଠାରେ ଦେଖାଯିବ"</string>
