--- a/apk/res/values-pl/strings.xml
+++ b/apk/res/values-pl/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Przenieś na koniec"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Przycisk do przesuwania i zmiany kolejności aplikacji <xliff:g id="SELECTED_APP">%s</xliff:g> na liście priorytetów"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Przycisk usuwania aplikacji <xliff:g id="SELECTED_APP">%s</xliff:g> z listy priorytetów"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"Przycisk do zmiany kolejności lub usunięcia aplikacji <xliff:g id="SELECTED_APP">%s</xliff:g> z listy źródeł aplikacji"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Aby zmienić kolejność, kliknij dwukrotnie i przeciągnij"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="POSITION">%1$s</xliff:g> na liście aplikacji <xliff:g id="SELECTED_APP">%2$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"fitness, samopoczucie"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"uprawnienia"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, dane dotyczące zdrowia, kategorie zdrowotne, dostęp do danych, aktywność, pomiary ciała, trasa rowerowa, odżywianie, sen, parametry życiowe"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Dodaj aplikację"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Edytuj źródła aplikacji"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Ustawienie domyślne urządzenia"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Przenieś w górę"</string>
+    <string name="move_down" msgid="4404970288236170693">"Przenieś w dół"</string>
+    <string name="remove" msgid="1340423400489007362">"Usuń"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Dane aplikacji"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Tutaj pojawią się dane z aplikacji <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Tutaj pojawią się dane z aplikacji z dostępem do Health Connect"</string>
