--- a/apk/res/values-pt-rPT/strings.xml
+++ b/apk/res/values-pt-rPT/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Mover para o fim"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Botão para arrastar e reordenar a app <xliff:g id="SELECTED_APP">%s</xliff:g> na lista de prioridades"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Botão que remove a app <xliff:g id="SELECTED_APP">%s</xliff:g> da lista de prioridades"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"Botão para reordenar ou remover a app <xliff:g id="SELECTED_APP">%s</xliff:g> da lista de origens de apps"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Toque duas vezes e arraste para reordenar"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="POSITION">%1$s</xliff:g> na lista <xliff:g id="SELECTED_APP">%2$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"fitness, bem-estar"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"autorizações"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"saúde connect, dados de saúde, categorias de saúde, acesso a dados, atividade, medições corporais, monitorização do ciclo, nutrição, sono, sinais vitais"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Adicionar app"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Editar origens de apps"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Predefinição do dispositivo"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Mover para cima"</string>
+    <string name="move_down" msgid="4404970288236170693">"Mover para baixo"</string>
+    <string name="remove" msgid="1340423400489007362">"Remover"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Dados de apps"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Os dados da app <xliff:g id="APP_NAME">%1$s</xliff:g> são apresentados aqui"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Os dados de apps com acesso à Saúde Connect são apresentados aqui"</string>
