--- a/apk/res/values-sk/strings.xml
+++ b/apk/res/values-sk/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Presunúť na koniec"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Tlačidlo na presunutie a zmenu poradia aplikácie <xliff:g id="SELECTED_APP">%s</xliff:g> v zozname prioritných"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Tlačidlo na odstránenie apl. <xliff:g id="SELECTED_APP">%s</xliff:g> zo zozn. prioritných"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"Tlačidlo na zmenu poradia alebo odstránenie aplikácie <xliff:g id="SELECTED_APP">%s</xliff:g> zo zoznamu zdrojov aplikácií"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Poradie zmeníte dvojitým klepnutím a presunutím"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="POSITION">%1$s</xliff:g>. v zozname <xliff:g id="SELECTED_APP">%2$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"kondícia, zdravý životný štýl"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"povolenia"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"dáta o zdraví, údaje o zdraví, kategórie zdravotných informácií, prístup k údajom, aktivita, telesné miery, sledovanie cyklu, výživa, spánok, životné funkcie"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Pridať aplikáciu"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Upraviť zdroje aplikácií"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Predvolená aplikácia zariadenia"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Presunúť nahor"</string>
+    <string name="move_down" msgid="4404970288236170693">"Presunúť nadol"</string>
+    <string name="remove" msgid="1340423400489007362">"Odstrániť"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Dáta aplikácie"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Tu sa budú zobrazovať údaje z aplikácie <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Tu sa budú zobrazovať údaje z aplikácií s prístupom k Dátam o zdraví"</string>
