--- a/apk/res/values-th/strings.xml
+++ b/apk/res/values-th/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"ย้ายไปด้านล่างสุด"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"ปุ่มสำหรับลากและจัดเรียง <xliff:g id="SELECTED_APP">%s</xliff:g> ใหม่ในรายการสำคัญ"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"ปุ่มสำหรับนำ <xliff:g id="SELECTED_APP">%s</xliff:g> ออกจากรายการสำคัญ"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"ปุ่มสำหรับจัดเรียงใหม่หรือนำ <xliff:g id="SELECTED_APP">%s</xliff:g> ออกจากรายการแหล่งที่มาของแอป"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"แตะสองครั้งแล้วลากเพื่อจัดเรียงใหม่"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"อันดับที่ <xliff:g id="POSITION">%1$s</xliff:g> ในรายการ <xliff:g id="SELECTED_APP">%2$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"ฟิตเนส, ความแข็งแรงสมบูรณ์"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"สิทธิ์"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"Health Connect, ข้อมูลสุขภาพ, หมวดหมู่สุขภาพ, การเข้าถึงข้อมูล, กิจกรรม, การตรวจวัดร่างกาย, การติดตามรอบเดือน, โภชนาการ, การนอนหลับ, ค่าสัญญาณชีพ"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"เพิ่มแอป"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"แก้ไขแหล่งที่มาของแอป"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"ค่าเริ่มต้นของอุปกรณ์"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"ย้ายขึ้น"</string>
+    <string name="move_down" msgid="4404970288236170693">"ย้ายลง"</string>
+    <string name="remove" msgid="1340423400489007362">"นำออก"</string>
     <string name="app_data_title" msgid="6499967982291000837">"ข้อมูลแอป"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"ข้อมูลจาก <xliff:g id="APP_NAME">%1$s</xliff:g> จะแสดงที่นี่"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"ข้อมูลจากแอปที่มีสิทธิ์เข้าถึง Health Connect จะแสดงที่นี่"</string>
