--- a/apk/res/values-tr/strings.xml
+++ b/apk/res/values-tr/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"En alta taşı"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"<xliff:g id="SELECTED_APP">%s</xliff:g> uygulamasını sürükleyip öncelik listesinde yeniden sıralama düğmesi"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"<xliff:g id="SELECTED_APP">%s</xliff:g> uygulamasını öncelik listesinden kaldırma düğmesi"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"Uygulama kaynakları listesinde uygulamanın (<xliff:g id="SELECTED_APP">%s</xliff:g>) sırasını değiştirme veya uygulamayı listeden kaldırma düğmesi"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Yeniden sıralamak için iki kez dokunup sürükleyin"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="SELECTED_APP">%2$s</xliff:g> listesinde <xliff:g id="POSITION">%1$s</xliff:g>. sırada"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"fitness, sağlıklı yaşam"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"izinler"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, sağlık verileri, sağlık kategorileri, veri erişimi, aktivite, vücut ölçümleri, âdet döngüsü takibi, beslenme, uyku, hayati bulgular"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Uygulama ekle"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Uygulama kaynaklarını düzenleyin"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Cihaz varsayılanı"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Yukarı taşı"</string>
+    <string name="move_down" msgid="4404970288236170693">"Aşağı taşı"</string>
+    <string name="remove" msgid="1340423400489007362">"Kaldır"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Uygulama verileri"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> verileri burada gösterilir"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connect\'e erişimi olan uygulamaların verileri burada gösterilir"</string>
