--- a/apk/res/values-uz/strings.xml
+++ b/apk/res/values-uz/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Oxiriga olish"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Muhim roʻyxatda <xliff:g id="SELECTED_APP">%s</xliff:g> ilovasini oʻrnini oʻzgartirish uchun tugma"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Muhim ro\'yxatdan <xliff:g id="SELECTED_APP">%s</xliff:g> ilovasini olish tugmasi"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"Ilovalar roʻyxatidan <xliff:g id="SELECTED_APP">%s</xliff:g> ilovasini olib tashlash yoki qayta tartiblash tugmasi"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Qayta tartiblash uchun ikki marta bosing va suring"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"ilovalar roʻyxatida: <xliff:g id="POSITION">%1$s</xliff:g>, <xliff:g id="SELECTED_APP">%2$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"fitnes, salomatlik"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"ruxsatlar"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, salomatlik axboroti, salomatlik turkumlari, maʼlumotlarga kirish, faoliyat, jismoniy koʻrsatkichlar, davr kuzatuvi, ovqatlanish, uyqu, koʻrsatkichlar"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Ilova kiriting"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Ilova manbalarini tahrirlash"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Qurilma standarti"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Tepaga olish"</string>
+    <string name="move_down" msgid="4404970288236170693">"Pastga olish"</string>
+    <string name="remove" msgid="1340423400489007362">"Olib tashlash"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Ilovaga tegishli maʼlumotlar"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> maʼlumotlari shu yerda chiqadi"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connect xizmatiga ruxsati bor ilovalar axboroti shu yerda chiqadi"</string>
