--- a/apk/res/values-zu/strings.xml
+++ b/apk/res/values-zu/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Yisa phansi"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Inkinobho yokuhudula nokuhlela kabusha i-<xliff:g id="SELECTED_APP">%s</xliff:g> kuhlu lokubalulekile"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Inkinobho yokususa i-<xliff:g id="SELECTED_APP">%s</xliff:g> kuhlu lokubalulekile"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"Inkinobho yokuhlela kabusha noma ukususa i-<xliff:g id="SELECTED_APP">%s</xliff:g> ohlwini lwemithombo ye-app"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Thepha kabili bese uyahudula ukuze uhlele kabusha"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="POSITION">%1$s</xliff:g> ohlwini <xliff:g id="SELECTED_APP">%2$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"ukufaneleka, impilo enhle"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"izimvume"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"ukuxhumana kwezempilo, idatha yezempilo, izigaba zezempilo, ukufinyelela idatha, umsebenzi, izilinganiso zomzimba, ukulandelela umjikelezo, umsoco, ukulala, okubalulekile"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Faka i-app"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Hlela izinsiza ze-app"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Idivayisi ezenzakalelayo"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Khuphula"</string>
+    <string name="move_down" msgid="4404970288236170693">"Yehlisa"</string>
+    <string name="remove" msgid="1340423400489007362">"Susa"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Idatha ye-app"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Idatha evela ku-<xliff:g id="APP_NAME">%1$s</xliff:g> izobonakala lapha"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Idatha ekuma-app akwazi ukufinyelela kuHealth Connect izovela lapha"</string>
