Rename Unkown Resource to No title for medical entries with no display name
Fix: 391545581
Test: atest
Flag: NONE bug fix
Change-Id: I7ead607890e03e66a16e117ada008d4b5c3c4a53

--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -576,7 +576,7 @@
     <string name="navigation_selected_day" description="Content description for button that contains selected day. [CHAR_LIMIT=NONE]">Selected day</string>
     <string name="navigation_previous_day" description="Content description for button that changes the current data view to the previous day [CHAR_LIMIT=NONE]">Previous day</string>
     <string name="default_error" description="Label shown when a user initiated action fails (e.g. deleting data) [CHAR_LIMIT=NONE]">Something went wrong. Please try again.</string>
-    <string name="unkwown_resource" description="Label shown when a medical data cannot be identified [CHAR_LIMIT=NONE]">Unknown Resource</string>
+    <string name="unkwown_resource" description="Label shown when a medical data cannot be identified [CHAR_LIMIT=NONE]">(No title)</string>
 
     <!-- endregion -->
 
